--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.3.4",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.8.3",
-        "laravel-vite-plugin": "^0.7.2",
+        "laravel-vite-plugin": "^1.2.0",
+        "postcss": "^8.5.3",
         "tailwindcss": "^3.4.17",
-        "vite": "^4.0.0"
+        "vite": "^6.2.2"
     },
     "dependencies": {
         "react": "^19.0.0",
